app/globals.css
/* ... */
.bg-default-200 {
  --tw-bg-opacity: 1;
  background-color: hsl(240 5.88% 90% / var(--nextui-default-200-opacity, 1));
}

.border-default-200 {
  --tw-border-opacity: 1;
  border-color: hsl(240 5.88% 90% / var(--nextui-default-200-opacity, 1));
}

.bg-background {
  --tw-bg-opacity: 1;
  background-color: var(--color-primary);
}

.scrollbar-hide {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.scrollbar-hide::-webkit-scrollbar {
  display: none;
}

/* tabs animation nextui */
.text-small {
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.py-1 {
  padding-top: .25rem;
  padding-bottom: .25rem;
}

.px-3 {
  padding-left: .75rem;
  padding-right: .75rem;
}

.h-8 {
  height: 2rem;
}

[role=button], button {
  cursor: pointer;
}

button, input:where([type=button]), input:where([type=reset]), input:where([type=submit]) {
  -webkit-appearance: button;
  appearance: button;
  background-color: transparent;
  background-image: none;
}

button, select {
  text-transform: none;
}

.transition-colors {
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
  transition-timing-function: cubic-bezier(.4,0,.2,1);
  transition-duration: .25s;
}

.transition-opacity {
  transition-property: opacity;
  transition-timing-function: cubic-bezier(.4,0,.2,1);
  transition-duration: .25s;
}

button, input, optgroup, select, textarea {
  font-family: inherit;
  font-feature-settings: inherit;
  font-variation-settings: inherit;
  font-size: 100%;
  font-weight: inherit;
  line-height: inherit;
  letter-spacing: inherit;
  color: inherit;
  margin: 0;
  padding: 0;
}

/* custom breakpoint tw */ 
@media (min-width: 1400px) {
  .xxl\:grid-cols-3 {
      grid-template-columns: repeat(3, minmax(0, 1fr));
  }
}

@media (min-width: 810px) {
  .mmd-grid-cols-2 {
      grid-template-columns: repeat(2, minmax(0, 1fr));
  }
}

